--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@
 
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "6.5.0.3"
 }
 
 version '1.0.0'
@@ -20,4 +21,8 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 }
