--- a/src/main/resources/configmodels/CredentialConfig.yaml
+++ b/src/main/resources/configmodels/CredentialConfig.yaml
@@ -1,22 +1,24 @@
 ---
 "$schema": http://json-schema.org/draft-07/schema#
 "$id": https://github.com/airbytehq/airbyte/blob/master/airbyte-config/models/src/main/resources/types/State.yaml
-title: ScenarioConfigAction
+title: CredentialConfig
 description: Test scenario action settings
 type: object
 required:
-  - action
+  - credentialName
+  - credentialType
+  - credentialJson
 additionalProperties: false
 properties:
-  action:
+  credentialName:
     description: tbd
-    type: object
-    existingJavaType: io.airbyte.testingtool.scenario.action.Actions
-  resultInstance:
+    type: string
+  credentialType:
     description: tbd
-    "$ref": ScenarioConfigInstance.yaml
-  requiredInstances:
+    "$ref": InstanceCredTypes.yaml
+  instanceType:
     description: tbd
-    type: array
-    items:
-      "$ref": ScenarioConfigInstance.yaml
+    type: string
+  credentialJson:
+    description: tbd
+    existingJavaType: com.fasterxml.jackson.databind.JsonNode
