Add model descriptions.

--- a/src/main/resources/configmodels/CredentialConfig.yaml
+++ b/src/main/resources/configmodels/CredentialConfig.yaml
@@ -2,7 +2,7 @@
 "$schema": http://json-schema.org/draft-07/schema#
 "$id": https://github.com/airbytehq/airbyte/blob/master/airbyte-config/models/src/main/resources/types/State.yaml
 title: CredentialConfig
-description: Test scenario action settings
+description: The credential config for instances like Source, Destination, Airbyte, etc.
 type: object
 required:
   - credentialName
@@ -11,14 +11,14 @@ required:
 additionalProperties: false
 properties:
   credentialName:
-    description: tbd
+    description: Credential name. Recommend to keep it unique to avoid duplication in logs.
     type: string
   credentialType:
-    description: tbd
+    description: Credential type.
     "$ref": InstanceCredTypes.yaml
   instanceType:
-    description: tbd
+    description: Instance type name in the Airbyte. For example, the Postgres source is named in the Airbyte `Postgres`.
     type: string
   credentialJson:
-    description: tbd
+    description: Json contains all required credentials for instance creation.
     existingJavaType: com.fasterxml.jackson.databind.JsonNode
