--- a/src/main/resources/configmodels/InstanceCredTypes.yaml
+++ b/src/main/resources/configmodels/InstanceCredTypes.yaml
@@ -2,7 +2,7 @@
 "$schema": http://json-schema.org/draft-07/schema#
 "$id": https://github.com/airbytehq/airbyte/blob/master/airbyte-config/models/src/main/resources/types/State.yaml
 title: InstanceCredTypes
-description: tbd
+description: Types of instance credentials.
 type: string
 enum:
   - source_creds
