--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ repositories {
 }
 
 dependencies {
+    implementation platform('com.google.cloud:libraries-bom:26.1.0')
+
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
@@ -43,6 +45,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.airbyte:airbyte-api:0.40.0-alpha'
+    implementation 'com.google.cloud:google-cloud-secretmanager'
 }
 
 jsonSchema2Pojo {
