--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.airbyte:airbyte-api:0.40.0-alpha'
     implementation 'com.google.cloud:google-cloud-secretmanager'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.3.0'
 }
 
 jsonSchema2Pojo {
