--- a/build.gradle
+++ b/build.gradle
@@ -38,15 +38,16 @@ repositories {
 dependencies {
     implementation platform('com.google.cloud:libraries-bom:26.1.0')
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.airbyte:airbyte-api:0.40.0-alpha'
     implementation 'com.google.cloud:google-cloud-secretmanager'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:1.3.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.10.0'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 }
 
 jsonSchema2Pojo {
