--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ repositories {
 }
 
 dependencies {
+    // https://mavenlibs.com/maven/dependency/org.slf4j/slf4j-api
+    implementation 'org.slf4j:slf4j-api:2.0.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
@@ -59,4 +61,10 @@ jsonSchema2Pojo {
     includeConstructors = false
     includeSetters = true
     serializable = true
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': "io.airbyte.testingtool.TestingTool"
+    }
 }
