--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -31,6 +31,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Download image
+        uses: ishworkh/docker-image-artifact-download@v1
         with:
           image: "postgres:latest"
 
