--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -30,10 +30,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Download image
-        uses: airbytehq/airbyte-e2e-testing-tool@v1
-        with:
-          image: "postgres:latest"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Pull Docker image
+        run : docker pull postgres
+
+      - name: Run docker container with command ${{ github.event.inputs.comment-id }}
+        run: |
+          ./tools/run_help_full.sh ${{ github.event.inputs.comment-id }}
 
       - name: Link comment to workflow run
         if: github.event.inputs.comment-id
@@ -42,7 +47,7 @@ jobs:
           comment-id: ${{ github.event.inputs.comment-id }}
           body: |
             > :clock2: ${{github.event.inputs.connector}} https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-            
+
       - name: Add Failure Comment
         if: github.event.inputs.comment-id && failure()
         uses: peter-evans/create-or-update-comment@v1
