--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -11,9 +11,6 @@ on:
         description: "The git ref to check out from the specified repository."
         required: false
         default: master
-      command:
-        description: "The command for docker container."
-        required: true
       comment-id:
         description: "The comment-id of the slash command. Used to update the comment with the status."
         required: false
@@ -39,9 +36,9 @@ jobs:
       - name: Pull Docker image 
         run : docker pull postgres
 
-      - name: Run docker container with command ${{ github.event.inputs.command }}
+      - name: Run docker container ${{ github.event.inputs.comment-id }}
         run: |
-          ./tools/run_help_full.sh ${{ github.event.inputs.command }}
+          ./tools/run_help_full.sh /help-full
 
       - name: Link comment to workflow run
         if: github.event.inputs.comment-id
