--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Pull Docker image
         run : docker pull postgres
 
+      - name: Change wrapper permissions
+        run: chmod +x ./.github/scripts/run_help_full.sh
+
       - name: Run docker container ${{ github.event.inputs.comment-id }}
         shell: bash
         run: ./.github/scripts/run_help_full.sh /help-full
