--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -33,8 +33,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Pull Docker image 
+      - name: Pull Docker image
         run : docker pull postgres
+
+      - name: Change wrapper permissions
+        run: chmod +x ./.github/scripts/run_help_full.sh
 
       - name: Run docker container ${{ github.event.inputs.comment-id }}
         shell: bash
