--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -43,6 +43,14 @@ jobs:
         shell: bash
         run: ./.github/scripts/run_help_full.sh /help-full
 
+      - name: Add Success Comment
+        if: github.event.inputs.comment-id && success()
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          comment-id: ${{ github.event.inputs.comment-id }}
+          body: |
+            > :white_check_mark: ${{github.event.inputs.connector}} https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+
       - name: Add Failure Comment
         if: github.event.inputs.comment-id && failure()
         uses: peter-evans/create-or-update-comment@v1
