--- a/.github/workflows/help-full-command.yml
+++ b/.github/workflows/help-full-command.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           comment-id: ${{ github.event.inputs.comment-id }}
           body: |
-            > :white_check_mark: ${{github.event.inputs.connector}} https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+            > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
 
       - name: Add Failure Comment
         if: github.event.inputs.comment-id && failure()
@@ -63,5 +63,4 @@ jobs:
         with:
           comment-id: ${{ github.event.inputs.comment-id }}
           body: |
-            > :x: ${{github.event.inputs.connector}} https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-            > :bug: ${{env.GRADLE_SCAN_LINK}}
+            > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
