--- a/.github/workflows/slash-commands.yml
+++ b/.github/workflows/slash-commands.yml
@@ -5,10 +5,15 @@ on:
     types: [created]
 
 jobs:
-  slashCommandDispatch:
+  setParams:
     # Only allow slash commands on pull request (not on issues)
     if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
+    outputs:
+      repo: ${{ steps.getref.outputs.repo }}
+      ref: ${{ steps.getref.outputs.ref }}
+      comment-id: ${{ steps.comment-info.outputs.comment-id }}
+      comment-body: ${{ steps.comment-info.outputs.comment-body }}
     steps:
       - name: Get PR repo and ref
         id: getref
@@ -35,6 +40,11 @@ jobs:
           comment-id: ${{ github.event.comment.id }}
           edit-mode: replace
           body: ${{ steps.regex.outputs.first_match }}
+  slashCommandDispatch:
+    if: ${{ github.event.issue.pull_request }}
+    runs-on: ubuntu-latest
+    needs: setParams
+    steps:
       - name: Slash Command Dispatch
         id: scd
         uses: peter-evans/slash-command-dispatch@v2
@@ -43,10 +53,10 @@ jobs:
           commands: |
             help-full
           static-args: |
-            repo=${{ steps.getref.outputs.repo }}
-            gitref=${{ steps.getref.outputs.ref }}
-            comment-id=${{ steps.comment-info.outputs.comment-id }}
-            comment-body=${{ steps.comment-info.outputs.comment-body }}
+            repo=${{ needs.setParams.outputs.repo }}
+            gitref=${{ needs.setParams.outputs.ref }}
+            comment-id=${{ needs.setParams.outputs.comment-id }}
+            comment-body=${{ needs.setParams.outputs.comment-body }}
           dispatch-type: workflow
       - name: Edit comment with error message
         if: steps.scd.outputs.error-message
