--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Pull Docker image
         run: docker pull postgres
       - name: Ls
-        run: ls -al
+        run: ls ../ -al
       - name: Change wrapper permissions
         run: chmod +x ./.github/scripts/run_docker_with_params.sh
 #      - name: Run docker container with params
