--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./.github/scripts/run_docker_with_params.sh
       - name: Run docker container with params
-        run: ./.github/scripts/run_docker_with_params.sh ${{ needs.setParams.outputs.comment-body }}
+        run: ./.github/scripts/run_docker_with_params.sh "${{ needs.setParams.outputs.comment-body }}"
       - name: Add Success Comment
         if: github.event.inputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
