--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -37,7 +37,7 @@ jobs:
       - name: qqq ${{ steps.regex.outputs.first_match }}
         run: echo ${{ steps.regex.outputs.first_match }}
   slashCommandDispatch:
-    if: ${{ needs.setParams.outputs.command }} == "/help-full" || ${{ needs.setParams.outputs.command }} == "/list-scenarios"
+    if: needs.setParams.outputs.command == '/help-full' || needs.setParams.outputs.command == '/list-scenarios'
     runs-on: ubuntu-latest
     needs: setParams
     steps:
