update errors message

--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -34,10 +34,13 @@ jobs:
           regex_pattern: "^/[a-zA-Z0-9_/-]+"
           regex_flags: "i"
           search_string: ${{ github.event.comment.body }}
-      - name: qqq ${{ steps.regex.outputs.first_match }}
-        run: echo ${{ steps.regex.outputs.first_match }}
   slashCommandDispatch:
-    if: needs.setParams.outputs.command == '/help-full' || needs.setParams.outputs.command == '/list-scenarios'
+    if: | 
+      needs.setParams.outputs.command == '/help-full' || 
+      needs.setParams.outputs.command == '/list-scenarios' || 
+      needs.setParams.outputs.command == '/run-scenario' || 
+      needs.setParams.outputs.command == '/run-scenario-local' || 
+      needs.setParams.outputs.command == '/help'
     runs-on: ubuntu-latest
     needs: setParams
     steps:
