--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -26,7 +26,8 @@ jobs:
         id: comment-info
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          echo ::set-output name=comment-body::"${{ github.event.comment.body }}"
+          c=${${{ github.event.comment.body }}//\"/\\\"}
+          echo ::set-output name=comment-body::"$c"
       - name: Get command
         id: regex
         uses: AsasInnab/regex-action@v1
@@ -58,7 +59,7 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./.github/scripts/run_docker_with_params.sh
       - name: Run docker container with params
-        run: ./.github/scripts/run_docker_with_params.sh ${{ github.event.comment.body }}
+        run: ./.github/scripts/run_docker_with_params.sh ${{ needs.setParams.outputs.comment-body }}
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
