--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Get comment id
         id: comment-info
         run: |
+          body_modified="${{ github.event.comment.body }}"
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          body="${{ github.event.comment.body }}"
-          echo ::set-output name=comment-body::"${body//\"/\\\"}"
+          echo ::set-output name=comment-body::"${body_modified//\"/\\\"}"
       - name: Get command
         id: regex
         uses: AsasInnab/regex-action@v1
