--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -25,11 +25,9 @@ jobs:
       - name: Get comment id
         id: comment-info
         run: |
-          body_modified=${${{ github.event.comment.body }}//\"/\\\"}
+          body_modified=${{ github.event.comment.body }}
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          qqq=${body_modified//\"/\\\"}
-          echo $qqq
-          echo ::set-output name=comment-body::"${qqq}"
+          echo ::set-output name=comment-body::"$body_modified"
       - name: Get command
         id: regex
         uses: AsasInnab/regex-action@v1
