--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           body_modified=${{ github.event.comment.body }}
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          echo ::set-output name=comment-body::"$body_modified"
+          echo ::set-output name=comment-body::"${{ github.event.comment.body }}"
       - name: Get command
         id: regex
         uses: AsasInnab/regex-action@v1
