--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -59,7 +59,9 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./.github/scripts/run_docker_with_params.sh
       - name: Run docker container with params
-        run: ./.github/scripts/run_docker_with_params.sh ${{ needs.setParams.outputs.comment-body }}
+        run: |
+          echo "${{ needs.setParams.outputs.comment-body }}"
+          ./.github/scripts/run_docker_with_params.sh "${{ needs.setParams.outputs.comment-body }}"
       - name: Add Success Comment
         if: needs.setParams.outputs.comment-id && success()
         uses: peter-evans/create-or-update-comment@v1
