--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -26,8 +26,11 @@ jobs:
         id: comment-info
         run: |
           body_modified=${{ github.event.comment.body }}
+          echo $body_modified
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
           echo ::set-output name=comment-body::"${{ github.event.comment.body }}"
+      - name: qqq
+          echo "${{ steps.comment-info.outputs.comment-body }}"
       - name: Get command
         id: regex
         uses: AsasInnab/regex-action@v1
@@ -35,44 +38,44 @@ jobs:
           regex_pattern: "^/[a-zA-Z0-9_/-]+"
           regex_flags: "i"
           search_string: ${{ github.event.comment.body }}
-  slashCommandDispatch:
-    if: | 
-      needs.setParams.outputs.command == '/help-full' || 
-      needs.setParams.outputs.command == '/list-scenarios' || 
-      needs.setParams.outputs.command == '/run-scenario' || 
-      needs.setParams.outputs.command == '/run-scenario-local' || 
-      needs.setParams.outputs.command == '/help'
-    runs-on: ubuntu-latest
-    needs: setParams
-    steps:
-      - name: Update comment for processing
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ needs.setParams.outputs.comment-id }}
-          reactions: eyes, rocket
-      - name: Checkout Airbyte
-        uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Pull Docker image
-        run: docker pull postgres
-      - name: Change wrapper permissions
-        run: chmod +x ./.github/scripts/run_docker_with_params.sh
-      - name: Run docker container with params
-        run: |
-          echo "${{ needs.setParams.outputs.comment-body }}"
-          ./.github/scripts/run_docker_with_params.sh "${{ needs.setParams.outputs.comment-body }}"
-      - name: Add Success Comment
-        if: needs.setParams.outputs.comment-id && success()
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ needs.setParams.outputs.comment-id }}
-          body: |
-            > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-      - name: Add Failure Comment
-        if: needs.setParams.outputs.comment-id && failure()
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          comment-id: ${{ needs.setParams.outputs.comment-id }}
-          body: |
-            > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+#  slashCommandDispatch:
+#    if: |
+#      needs.setParams.outputs.command == '/help-full' ||
+#      needs.setParams.outputs.command == '/list-scenarios' ||
+#      needs.setParams.outputs.command == '/run-scenario' ||
+#      needs.setParams.outputs.command == '/run-scenario-local' ||
+#      needs.setParams.outputs.command == '/help'
+#    runs-on: ubuntu-latest
+#    needs: setParams
+#    steps:
+#      - name: Update comment for processing
+#        uses: peter-evans/create-or-update-comment@v1
+#        with:
+#          comment-id: ${{ needs.setParams.outputs.comment-id }}
+#          reactions: eyes, rocket
+#      - name: Checkout Airbyte
+#        uses: actions/checkout@v2
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: Pull Docker image
+#        run: docker pull postgres
+#      - name: Change wrapper permissions
+#        run: chmod +x ./.github/scripts/run_docker_with_params.sh
+#      - name: Run docker container with params
+#        run: |
+#          echo "${{ needs.setParams.outputs.comment-body }}"
+#          ./.github/scripts/run_docker_with_params.sh "${{ needs.setParams.outputs.comment-body }}"
+#      - name: Add Success Comment
+#        if: needs.setParams.outputs.comment-id && success()
+#        uses: peter-evans/create-or-update-comment@v1
+#        with:
+#          comment-id: ${{ needs.setParams.outputs.comment-id }}
+#          body: |
+#            > :white_check_mark: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
+#      - name: Add Failure Comment
+#        if: needs.setParams.outputs.comment-id && failure()
+#        uses: peter-evans/create-or-update-comment@v1
+#        with:
+#          comment-id: ${{ needs.setParams.outputs.comment-id }}
+#          body: |
+#            > :x: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
