--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -27,9 +27,9 @@ jobs:
         run: |
           body_modified=${{ github.event.comment.body }}
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          c=${body_modified//\"/\\\"}
-          echo $c
-          echo ::set-output name=comment-body::"$c"
+          c=${{body_modified//\"/\\\"}}
+          echo ${{ c }}
+          echo ::set-output name=comment-body::"${{ c }}"
       - name: check
         run: |
           echo "${{ steps.comment-info.outputs.comment-body }}"
