update errors message

--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Get comment id
         id: comment-info
         run: |
-          body_modified=${{ github.event.comment.body }}
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
+          body_modified="${{ github.event.comment.body }}"
           c=${body_modified//\"/\\\"}
-          echo ${{ c }}
-          echo ::set-output name=comment-body::"${{ c }}"
+          echo "${c}"
+          echo ::set-output name=comment-body::"${c}"
       - name: check
         run: |
           echo "${{ steps.comment-info.outputs.comment-body }}"
