--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
           body_modified="${{ github.event.comment.body }}"
-          c=${body_modified//\"/\\\"}
+          c="${body_modified//\"/\\\"}"
           echo "${c}"
           echo ::set-output name=comment-body::"${c}"
       - name: check
