--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
           body_modified="${{ github.event.comment.body }}"
-          echo "$body_modified"
-          echo ::set-output name=comment-body::"$body_modified"
+          c="${body_modified//\"/\\\"}"
+          echo ::set-output name=comment-body::"${"${{ github.event.comment.body }}"//\"/\\\"}"
       - name: check
         run: |
           echo "${{ steps.comment-info.outputs.comment-body }}"
