update errors message

--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -26,7 +26,7 @@ jobs:
         id: comment-info
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
-          c="$(curl ${{ github.event.comment.body }})"
+          c="$(${{ github.event.comment.body }})"
           echo ::set-output name=comment-body::"$(echo $c)"
       - name: check
         run: |
