--- a/.github/workflows/run-slash-commands.yml
+++ b/.github/workflows/run-slash-commands.yml
@@ -16,6 +16,8 @@ jobs:
       comment-body: ${{ steps.comment-info.outputs.comment-body }}
       command: ${{ steps.regex.outputs.first_match }}
     steps:
+      - name: Checkout Airbyte
+        uses: actions/checkout@v2
       - name: Get PR repo and ref
         id: getref
         run: |
@@ -27,7 +29,7 @@ jobs:
         run: |
           echo ::set-output name=comment-id::"${{ github.event.comment.id }}"
           c="${{ github.event.comment.body }}"
-          echo ::set-output name=comment-body::"$(echo $c | jq -r '.head.ref')"
+          echo ::set-output name=comment-body::"$(echo $c)"
       - name: check
         run: |
           echo "${{ steps.comment-info.outputs.comment-body }}"
